--- a/aspnet2.csproj
+++ b/aspnet2.csproj
@@ -66,6 +66,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
@@ -76,6 +79,8 @@
     <Folder Include="Views\Products\" />
     <Folder Include="Views\Register\" />
     <Folder Include="Views\Login\" />
+    <Folder Include="Views\Cart\" />
+    <Folder Include="Views\Order\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
@@ -97,6 +102,16 @@
     <Compile Include="Controllers\LogoutController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Models\LoginView.cs" />
+    <Compile Include="Controllers\CartController.cs" />
+    <Compile Include="Models\CartAddView.cs" />
+    <Compile Include="Models\Cart.cs" />
+    <Compile Include="Models\CartItem.cs" />
+    <Compile Include="Services\CartService.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
+    <Compile Include="Models\UserInfo.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderProducts.cs" />
+    <Compile Include="Services\CartToOrderService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
@@ -120,6 +135,10 @@
     <Content Include="Views\Register\Index.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Content\App.js" />
+    <Content Include="Views\Cart\Index.cshtml" />
+    <Content Include="Views\Order\Create.cshtml" />
+    <Content Include="Views\Order\Index.cshtml" />
+    <Content Include="Views\Order\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="docker-compose.yml" />
